--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 </head>
 
 <body>
-    <section>
-        <h1>Let’s Help Those Who Are
+    <section class="one">
+        <h1 class="two">Let’s Help Those Who Are
             More In Need</h1>
+        <p>Every year so many nation disaster was happend on the planet. Floods, Droughts, Earthquakes, Tidal Surges,
+            Landslides, Cyclones. For this disaster many people lost theirs lives. We build a charity to care with them.
+            You also extend a helping hand to take over this. </p>
+
+        <a class="3" target="_blank" href="https://www.facebook.com/areyan.sofi">Donate Now</a>
+
     </section>
 </body>
 
