--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
 <body>
     <section class="one">
-        <h1 class="two">Let’s Help Those Who Are
-            More In Need</h1>
-        <p>Every year so many nation disaster was happend on the planet. Floods, Droughts, Earthquakes, Tidal Surges,
+        <h1 class="two">Let’s Help Those <div class="three">Who Are
+                More In Need</div>
+        </h1>
+        <p class="four">Every year so many nation disaster was happend on the planet. Floods, Droughts, Earthquakes,
+            Tidal Surges,
             Landslides, Cyclones. For this disaster many people lost theirs lives. We build a charity to care with them.
             You also extend a helping hand to take over this. </p>
 
-        <a class="3" target="_blank" href="https://www.facebook.com/areyan.sofi">Donate Now</a>
+        <a class="five" target="_blank" href="https://www.facebook.com/areyan.sofi">Donate Now</a>
 
     </section>
 </body>
