--- a/index.html
+++ b/index.html
@@ -18,12 +18,36 @@
         <h1 class="two">Let’s Help Those <div class="three">Who Are
                 More In Need</div>
         </h1>
-        <p class="four">Every year so many nation disaster was happend on the planet. Floods, Droughts, Earthquakes,
+        <p class="four">
+            Every year so many nation disaster was happend on the planet. Floods, Droughts, Earthquakes,
             Tidal Surges,
             Landslides, Cyclones. For this disaster many people lost theirs lives. We build a charity to care with them.
-            You also extend a helping hand to take over this. </p>
+            You also extend a helping hand to take over this.
+        </p>
 
         <a class="five" target="_blank" href="https://www.facebook.com/areyan.sofi">Donate Now</a>
+
+    </section>
+    <section class="six">
+        <h1 class="seven">Donate Today</h1>
+        <p class="eight">
+            Its necessary to take steps to do shomething for the victrims people. Keep donate. Our small donations will
+            go a long way. Inshallah
+        </p>
+        <div class="nine">
+            <ul class="ten">
+                <li><a href="#">500USD</a></li>
+                <li><a href="#">1000USD</a></li>
+                <li><a href="#">2000USD</a></li>
+                <li><a href="#">5000USD</a></li>
+                <li><a href="#">10000USD</a></li>
+            </ul>
+        </div>
+        <p class="eleven">
+            Others Amount(USD)
+        </p>
+        <a class="five" target="_blank" href="http://www.facebook.com\areyan.sofi">Donate Now</a>
+
 
     </section>
 </body>
