--- a/index.html
+++ b/index.html
@@ -50,6 +50,48 @@
 
 
     </section>
+    <section class="thirteen">
+        <h1 class="forteen">Our Donate Plan</h1>
+        <p class="fifteen">
+            Your donation will ensure that conflict-impacted populations receive the medical services they urgently
+            need. For every dollar donated in 2022, 94 cents went directly to programs (preliminary data).
+        </p>
+        <div class="sixteen">
+            <div class="sixteen1">
+                <img src="donate-today\icons\food.png" alt="Food">
+                <h2>Food for a family
+                </h2>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.
+                </p>
+            </div>
+            <div class="sixteen2">
+                <img src="donate-today\icons\shelter.png" alt="Family">
+                <h2>Shelter for a family
+                </h2>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.
+                </p>
+            </div>
+            <div class="sixteen3">
+                <img src="donate-today\icons\Frame-1.png" alt="Child">
+                <h2>Education for a child
+                </h2>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
