--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
             </div>
         </div>
     </section>
+    <section class="seventy">
+        <h1 class="seventyone">
+            Get My Updates
+        </h1>
+        <p class="seventytwo">
+            Keep wathcing Disaster Of The World or others ours media. You can folloy ours youtube channels and facebook
+            pages to get latest update.
+        </p>
+    </section>
 </body>
 
 </html>
