--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
             Keep wathcing Disaster Of The World or others ours media. You can folloy ours youtube channels and facebook
             pages to get latest update.
         </p>
+        <div class="seventythree">
+            <p>
+                <span class="Email">Email</span> <span class="Subscribe">Subscribe</span>
+            </p>
+        </div>
+        f
     </section>
 </body>
 
