--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark&family=Shrikhand&display=swap" rel="stylesheet">
 
 </head>
 
@@ -107,6 +107,23 @@
         </div>
         f
     </section>
+
 </body>
+<footer>
+    <section class="last">
+        <h1 class="humble">
+            Be Humble
+        </h1>
+        <div class="last-para">
+            <p>
+                Developedy by : Software Team, Sofiuzzama Sofi & বুচি Electronic Bangladesh Limited.
+            </p>
+            <p>
+                Copyright @ 1983-2022 Sofiuzzaman Sofi & বুচি Electronic Bangladesh Limited.
+            </p>
+        </div>
+
+    </section>
+</footer>
 
 </html>
